--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -6,7 +6,7 @@ ja:
       post_image: 投稿画像
     attributes:
       post/post_images:
-        name: post_images
+        post_image: 投稿画像
       post:
         title: タイトル
         body: 説明文
