--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -27,6 +27,9 @@ ja:
         remember_me: "次回から自動的にログイン"
     models:
       user: "ユーザ"
+  errors:
+    messages:
+      not_saved: "サインアップ 失敗！"
   devise:
     confirmations:
       new:
@@ -57,6 +60,8 @@ ja:
         forgot_your_password: "パスワードを忘れましたか?"
         send_me_reset_password_instructions: "パスワードの再設定方法を送信する"
     registrations:
+      user:
+        signed_up: "ユーザー登録に成功しました!"
       edit:
         are_you_sure: "本当に良いですか?"
         cancel_my_account: "アカウント削除"
@@ -68,17 +73,16 @@ ja:
         we_need_your_current_password_to_confirm_your_changes: "変更を反映するには現在のパスワードを入力してください"
       new:
         sign_up: "アカウント登録"
-      user:
-        signed_up: "ユーザー登録に成功しました！"
     sessions:
       user:
-        signed_in: "ログインに成功しました!"
-        signed_out: "ログアウトに成功しました"
+        signed_in: "ログインに成功しました！"
+        signed_out: "ログアウトに成功しました！"
+      new:
+        sign_in: "ログイン"
     failure:
       user:
         invalid: "ログインに失敗しました"
-      new:
-        sign_in: "ログイン"
+        not_found_in_database: "登録されていないメールアドレスです"
     shared:
       links:
         back: "戻る"
